STRUGGLING FOR TEAM MATCHING WITH USERS

--- a/src/main/resources/templates/adminCreateUser.html
+++ b/src/main/resources/templates/adminCreateUser.html
@@ -29,7 +29,7 @@
                 </tr>
                 <tr>
                     <td>팀 이름</td>
-                    <td><input type="text" id="teamName" name="studentEmail" th:value="${teamInfo?.teamName}"></td>
+                    <td><input type="text" id="teamName" name="teamName" th:value="${teamInfo?.teamName}"></td>
                 </tr>
                 <tr>
                     <td> 연도/학기 </td>
