--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
     <hr style="border: 1px solid #6d788a ">
     <div class="address"
          style="text-align: center;">
-        (04310) 서울특별시 용산구 청파로47길 100 (청파동2가) 숙명여자대학교 IT공학전공<span class="bar">|</span> TEL. 02)710-9379 <span class="bar">|</span> FAX. 02)-710-9704
+        (04310) 서울특별시 용산구 청파로47길 100 (청파동2가) 숙명여자대학교 IT공학전공 | TEL. 02)710-9379 | FAX. 02)-710-9704
     </div>
     <div class="copyright"
         style="text-align: center;">
