--- a/src/main/resources/templates/projectNotes.html
+++ b/src/main/resources/templates/projectNotes.html
@@ -9,7 +9,9 @@
 
 <!-- 해당페이지 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-    <script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
+   <script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/24.0.0/decoupled-document/ckeditor.js"></script>
+
     <style>
         .ck-editor__editable{
             min-height: 500px;
