--- a/src/main/resources/templates/changeEmail.html
+++ b/src/main/resources/templates/changeEmail.html
@@ -1,20 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>이메일 수정하기</title>
+    <style>
+        .oldEmailPart, .Email {
+            border: 0.5px solid #6d788a;
+            border-top: 3px solid black;
+            padding: 8px;
+        }
+        p{
+            font-size: 15pt;
+            font-weight: bold;
+        }
+
+        input[type=text]{
+            font-size: 18px;
+        }
+        .emailFormat{
+            font-size: 18px;
+        }
+
+        button {
+            background-color: #003087;
+            width: 50%;
+            color: white;
+            padding: 15px;
+            margin: 10px 0px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .buttonWrapper{
+            text-align: center;
+        }
+
+        button:hover, input[type=button]:hover {
+            opacity: 0.7;
+        }
+    </style>
 </head>
 <body>
 <form role="form" action="/changeEmail" id="changeEmail" method="POST">
-    <h3>이메일 수정</h3>
+    <h3>✔이메일 수정</h3>
+    <div class="oldEmailPart">
     <p>현재 이메일</p>
     <input type="text" id="oldEmail" value="" name="oldEmail"
-           required>@sookmyung.ac.kr
-
+           required><span class="emailFormat">@sookmyung.ac.kr</span>
+    </div>
+    <br>
+    <div class="Email">
     <p>새로운 이메일 입력</p>
     <input type="text" id="email" value="" name="email"
-           required>@sookmyung.ac.kr
-
+           required><span class="emailFormat">@sookmyung.ac.kr</span>
+    </div>
+    <br>
     <div class="buttonWrapper">
         <button type="submit" id="changeEmailButton" name="changeEmail">
             이메일 변경하기
