--- a/src/main/resources/templates/changePW.html
+++ b/src/main/resources/templates/changePW.html
@@ -2,19 +2,56 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>비밀번호 수정하기</title>
+    <style>
+        .oldPW, .PW {
+            border: 0.5px solid #6d788a;
+            border-top: 3px solid black;
+            padding: 8px;
+        }
+        p{
+            font-size: 15pt;
+            font-weight: bold;
+        }
+
+        input[type=password]{
+            font-size: 20px;
+        }
+
+        button {
+            background-color: #003087;
+            width: 50%;
+            color: white;
+            padding: 15px;
+            margin: 10px 0px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .buttonWrapper{
+            text-align: center;
+        }
+
+        button:hover, input[type=button]:hover {
+            opacity: 0.7;
+        }
+    </style>
 </head>
 <body>
 <form role="form" action="/changePW" id="changePW" method="POST">
-    <h3>비밀번호 수정</h3>
-    <p>현재 비밀번호 입력</p>
-    <input type="password" id="oldpw" value="" name="oldpw"
-           required minlength="6" maxlength="10">
-
-    <p>새로운 비밀번호 입력</p>
-    <input type="password" id="" value="" name="pass"
-           required minlength="6" maxlength="10">
-
+    <h2>✔비밀번호 수정</h2>
+    <div class="oldPW">
+        <p>현재 비밀번호 입력:</p>
+        <input type="password" id="oldpw" value="" name="oldpw"
+               required minlength="6" maxlength="10">
+    </div>
+    <br>
+    <div class="PW">
+        <p>새로운 비밀번호 입력:</p>
+        <input type="password" id="" value="" name="pass"
+               required minlength="6" maxlength="10">
+    </div>
+    <br>
     <div class="buttonWrapper">
         <button type="submit" id="changePWButton" name="changePW">
             비밀번호 변경하기
@@ -22,10 +59,10 @@
     </div>
 
     <script type="text/javascript">
-        if([[${isChanged}]]) {
+        if ([[${isChanged}]]) {
             alert('비밀번호가 변경되었습니다. 다음 로그인부터 반영됩니다.');
             window.close();
-        }else{
+        } else {
             alert('현재 비밀번호가 일치하지 않습니다.')
         }
     </script>
