fix error when delete post with empty files

--- a/src/main/resources/templates/projectPost.html
+++ b/src/main/resources/templates/projectPost.html
@@ -23,7 +23,7 @@
                     <form action="/projectPost" method="post" enctype="multipart/form-data">
                         <tr>
                             <td> 프로젝트 이름 </td>
-                            <td><input type="text" name="title"></td>
+                            <td><input type="text" name="title" required></td>
                         </tr>
                         <tr>
                             <td> 연도/학기 </td>
