--- a/src/main/resources/templates/projectPost.html
+++ b/src/main/resources/templates/projectPost.html
@@ -57,14 +57,13 @@
                                     <tr>
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="NodeJS">NodeJS</label></td>
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="Python">Python</label></td>
-                                        <td><label><input name="checkbox" class="language_select" type="checkbox" value="React Native">React Native</label></td>
+                                        <td><label><input name="checkbox" class="language_select" type="checkbox" value="React-Native">React-Native</label></td>
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="Spring">Spring</label></td>
                                         <td><label><input name="checkbox" class="language_select" type="checkbox" value="VueJS">VueJS</label></td>
                                         <td>
-                                            <label><input name="checkbox" id="etc" class="language_select" type="checkbox" value="changePlease"
+                                            <label><input name="checkbox" id="etc" class="language_select" type="checkbox" value="etc"
                                                           onclick="if (this.checked){
                                                               document.getElementById('changeMode').removeAttribute('disabled');
-                                                              document.getElementById('etc').value = document.getElementById('changeMode').value;
                                                           }else {
                                                               document.getElementById('changeMode').disabled = true;
                                                           }">기타</label>
