--- a/src/main/resources/templates/adminUpdateStatus.html
+++ b/src/main/resources/templates/adminUpdateStatus.html
@@ -14,6 +14,8 @@
 <div layout:fragment="content">
     <section>
         <aside class="leftsideblank">
+            <div th:replace="/fragments/sidebar.html :: sidebarFragment">
+            </div>
         </aside>
         <aside class="rightsideblank">
         </aside>
