--- a/src/main/resources/templates/projectList.html
+++ b/src/main/resources/templates/projectList.html
@@ -22,7 +22,7 @@
             <form action="/projectList" method="post">
             <table class="year">
                 <tr>
-                    <td><label><input id="total_year" name="year_select" type="radio" value="all_year"> 전체 </label></td>
+                    <td><label><input id="total_year" name="year_select" type="radio" value="all_year" checked> 전체 </label></td>
                     <td><label><input class="year_select" name="year_select" type="checkbox" value="2016"> 2016 </label></td>
                     <td><label><input class="year_select" name="year_select" type="checkbox" value="2017"> 2017 </label></td>
                     <td><label><input class="year_select" name="year_select" type="checkbox" value="2018"> 2018 </label></td>
@@ -34,7 +34,7 @@
 
             <table class="language">
                 <tr>
-                    <td><label><input id="language_total_year" name="language_select" type="radio" value="all_language">전체</label></td>
+                    <td><label><input id="language_total_year" name="language_select" type="radio" value="all_language" checked>전체</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="android">Android</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="cpp">C/C++</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="django">Django</label></td>
@@ -155,15 +155,27 @@
             <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
             <script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
             <script>
+                if($("input[type=radio]").is(':checked')) {
+                    $("input[type=radio]").parent().parent().css('color', '#ffffff');
+                    $("input[type=radio]").parent().parent().css('background-color', '#003087');
+                } else {
+                    $("input[type=radio]").parent().parent().css('color', '#000000');
+                    $("input[type=radio]").parent().parent().css('background-color', '');
+                }
+
                 $('#total_year').click( function () {
                     if ($(this).is(':checked')) {
                         $('.year_select').prop('checked', false);
+                        $('#total_year').parent().parent().css('color', '#ffffff');
+                        $('#total_year').parent().parent().css('background-color', '#003087');
                     }
                 });
 
                 $('.year_select').change( function () {
                     if ($(this).is(':checked')) {
                         $('#total_year').prop('checked', false);
+                        $('#total_year').parent().parent().css('color', '#000000');
+                        $('#total_year').parent().parent().css('background-color', '');
                     }
                 });
 
@@ -171,12 +183,16 @@
                 $('#language_total_year').click( function () {
                     if ($(this).is(':checked')) {
                         $('.language_select').prop('checked', false);
+                        $('#language_total_year').parent().parent().css('color', '#ffffff');
+                        $('#language_total_year').parent().parent().css('background-color', '#003087');
                     }
                 });
 
                 $('.language_select').change( function () {
                     if ($(this).is(':checked')) {
                         $('#language_total_year').prop('checked', false);
+                        $('#language_total_year').parent().parent().css('color', '#000000');
+                        $('#language_total_year').parent().parent().css('background-color', '');
                     }
                 });
             </script>
