change style of createUser, adminPage and change staff to admin

--- a/src/main/resources/templates/SignupInfo.html
+++ b/src/main/resources/templates/SignupInfo.html
@@ -77,7 +77,7 @@
                         <tr>
                             <td>신분</td>
                             <td><input type="radio" name="identity" value="ROLE_STUDENT">학생</td>
-                            <td><input type="radio" name="identity" value="ROLE_STAFF">교수자/조교</td>
+                            <td><input type="radio" name="identity" value="ROLE_ADMIN">교수자/조교</td>
                         </tr>
                         <tr>
                             <td>제1전공</td>
