--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -21,9 +21,9 @@
         <aside class="rightsideblank">
         </aside>
         <article>
-            <h1>관리자페이지</h1>
+            <h1 style="margin-top: 8%;">관리자페이지</h1>
             <a href="#"
-               onclick="window.open('/admin/createUser', 'adminCreateUser', 'width=500 height= 400'); return false">회원
+               onclick="window.open('/admin/createUser', 'adminCreateUser', 'width=600 height= 500'); return false">회원
                 생성</a>
 
         </article>
