--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,22 +35,22 @@
                 <li>
                     <a href="/projectProcess"> 졸업작품 진행 개요 </a>
                 </li>
-                <li><a th:if="${#authorization.expression('hasRole(''STAFF'')')}"
+                <li><a th:if="${#authorization.expression('hasRole(''ADMIN'')')}"
                        href="/projectRules"> 졸업작품 시행 규칙 </a>
-                    <a th:if="${#authorization.expression('!hasRole(''STAFF'')')}"
+                    <a th:if="${#authorization.expression('!hasRole(''ADMIN'')')}"
                        href="/projectRulesSaved"> 졸업작품 시행 규칙 </a>
                 </li>
                 <li>
-                    <a th:if="${#authorization.expression('hasRole(''STAFF'')')}"
+                    <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}"
                        href="/projectNotes"> 졸업작품 유의사항 </a>
-                    <a th:if="${#authorization.expression('!hasRole(''STAFF'')')}"
+                    <a th:if="${#authorization.expression('!hasRole(''ADMIN'')')}"
                        href="/projectNotesSaved"> 졸업작품 유의사항 </a>
                 </li>
                 <li>
                     <a href="/projectList"> 졸업작품 소개 </a>
                 </li>
                 <li>
-                    <a th:if="${#authorization.expression('hasRole(''STAFF'')')}"
+                    <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}"
                     href="/admin/adminPage"> 관리페이지 </a>
 
                     <a th:if ="${#authorization.expression('hasRole(''STUDENT'')')}"
