edit ckeditor and text alignment available

--- a/src/main/resources/templates/projectRules.html
+++ b/src/main/resources/templates/projectRules.html
@@ -4,17 +4,16 @@
 
 <!-- 해당페이지 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-    <!-- <link rel="stylesheet" type="text/css" th:href="@{/css/projectNotesStyle.css}"> -->
-</th:block>
-
-<!-- 해당페이지 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
-    <script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
     <style>
         .ck-editor__editable{
             min-height: 500px;
         }
     </style>
+</th:block>
+
+<!-- 해당페이지 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+    <script th:src="@{/ckeditor/build/ckeditor.js}"></script>
 </th:block>
 
 <div layout:fragment="content">
@@ -33,15 +32,43 @@
                 </div>
                 <br><br><br>
                 <input class="btn btn-primary" type="submit" role="button" value="저장">
-                <input class="btn btn-primary" role="button" value="게시글 보기" onclick="location.href='projectNotesSaved'">
+                <input class="btn btn-primary" role="button" value="게시글 보기" onclick="location.href='projectRulesSaved'">
             </form>
         </article>
         <script type="text/javascript">
             ClassicEditor
-                .create( document.querySelector( '#content' ),{
-                    removePlugins: ['CKFinderUploadAdapter', 'EasyImage', 'Image', 'ImageCaption', 'ImageStyle', 'ImageToolbar', 'ImageUpload', 'MediaEmbed', 'Table']
+                .create( document.querySelector( '#content' ), {
+
+                    toolbar: {
+                        items: [
+                            'heading',
+                            '|',
+                            'bold',
+                            'italic',
+                            'link',
+                            'bulletedList',
+                            'numberedList',
+                            '|',
+                            'indent',
+                            'outdent',
+                            '|',
+                            'blockQuote',
+                            'undo',
+                            'redo',
+                            'alignment'
+                        ]
+                    },
+                    language: 'ko',
+                    licenseKey: '',
+
+                } )
+                .then( editor => {
+                    window.editor = editor;
                 } )
                 .catch( error => {
+                    console.error( 'Oops, something went wrong!' );
+                    console.error( 'Please, report the following error on https://github.com/ckeditor/ckeditor5/issues with the build id and the error stack trace:' );
+                    console.warn( 'Build id: i18actvydgwm-f2rh0gfvttay' );
                     console.error( error );
                 } );
         </script>
