--- a/src/main/resources/templates/projectList.html
+++ b/src/main/resources/templates/projectList.html
@@ -35,16 +35,16 @@
             <table class="language">
                 <tr>
                     <td><label><input id="language_total_year" name="language_select" type="radio" value="all_language" checked>전체</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="android">Android</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="cpp">C/C++</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="django">Django</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="html">HTML5</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="java">Java</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="nodejs">NodeJS</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="python">Python</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="rn">React Native</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="spring">Spring</label></td>
-                    <td><label><input class="language_select" name="language_select" type="checkbox" value="vuejs">VueJS</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="Android">Android</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="C/C++">C/C++</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="Django">Django</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="HTML5">HTML5</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="Java">Java</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="NodeJS">NodeJS</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="Python">Python</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="React-Native">React Native</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="Spring">Spring</label></td>
+                    <td><label><input class="language_select" name="language_select" type="checkbox" value="VueJS">VueJS</label></td>
                     <td><label><input class="language_select" name="language_select" type="checkbox" value="etc">기타</label></td>
                 </tr>
             </table>
