--- a/src/main/resources/templates/projectDetail.html
+++ b/src/main/resources/templates/projectDetail.html
@@ -37,26 +37,38 @@
                     <p class="card-text" th:text="'기대효과: '+${post.effect}" style="font-size: 15pt"></p>
 
 
-                    <div th:if="${post.id != null}" style="margin-top: 3%; font-size: 12pt">
-                        <strong>제안서 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/proposal/' +${post.id}}" th:text="${proposalFileName}"></a>
-                    </div>
-                    <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                        <strong>최종발표 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/finalPT/' +${post.id}}" th:text="${finalPTFileName}"></a>
-                    </div>
-                    <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                        <strong>전시회 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/fair/' +${post.id}}" th:text="${fairFileName}"></a>
-                    </div>
-                    <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                        <strong>소스코드 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/source/' +${post.id}}" th:text="${sourceFileName}"></a>
-                    </div>
-                    <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                        <strong>논문 파일 : </strong>
-                        <a class="card-text" th:href="@{'/download/paper/' +${post.id}}" th:text="${paperFileName}"></a>
-                    </div>
+                    <table>
+                        <tr>
+                        <div th:if="${post.id != null}" style="margin-top: 3%; font-size: 12pt">
+                            <td><strong>제안서 파일</strong></td>
+                            <td colspan="2"><a class="card-text" th:href="@{'/download/proposal/' +${post.id}}" th:text="${proposalFileName}"></a></td>
+                        </div>
+                        </tr>
+                        <tr>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
+                            <td><strong>최종발표 파일</strong></td>
+                            <td colspan="2"><a class="card-text" th:href="@{'/download/finalPT/' +${post.id}}" th:text="${finalPTFileName}"></a></td>
+                        </div>
+                        </tr>
+                        <tr>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
+                            <td><strong>전시회 파일</strong></td>
+                            <td colspan="2"><a class="card-text" th:href="@{'/download/fair/' +${post.id}}" th:text="${fairFileName}"></a></td>
+                        </div>
+                        </tr>
+                        <tr>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
+                            <td><strong>소스코드 파일</strong></td>
+                            <td colspan="2"><a class="card-text" th:href="@{'/download/source/' +${post.id}}" th:text="${sourceFileName}"></a></td>
+                        </div>
+                        </tr>
+                        <tr>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
+                            <td><strong>논문 파일</strong></td>
+                            <td colspan="2"><a class="card-text" th:href="@{'/download/paper/' +${post.id}}" th:text="${paperFileName}"></a></td>
+                        </div>
+                        </tr>
+                    </table>
 
                 </div>
             </div>
