--- a/src/main/resources/templates/projectDetail.html
+++ b/src/main/resources/templates/projectDetail.html
@@ -4,7 +4,16 @@
 
 <!-- 해당페이지 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/projectListStyle.css}">
+    <style>
+        #fileTable{
+            width: 60%;
+            font-size: 11pt;
+            text-align: left;
+        }
+        th, td{
+            padding: 10px;
+        }
+    </style>
 </th:block>
 
 <!-- 해당페이지 고유 스크립트 추가 -->
@@ -23,7 +32,7 @@
             <div class="card">
                 <div class="card-body">
                     <h2 th:text="${post.title}"></h2>
-                    <div style="display: inline-block;">
+                    <div>
                         <p class="langlist" style="font-size: 12pt">개발환경: </p>
                         <p class="langlist" th:text="${post.languages}" style="font-size: 12pt"></p>
                     </div>
@@ -37,35 +46,35 @@
                     <p class="card-text" th:text="'기대효과: '+${post.effect}" style="font-size: 15pt"></p>
 
 
-                    <table>
+                    <table id="fileTable">
                         <tr>
-                        <div th:if="${post.id != null}" style="margin-top: 3%; font-size: 12pt">
-                            <td><strong>제안서 파일</strong></td>
-                            <td colspan="2"><a class="card-text" th:href="@{'/download/proposal/' +${post.id}}" th:text="${proposalFileName}"></a></td>
+                        <div th:if="${post.id != null}" style="margin-top: 3%; font-size: 11pt">
+                            <td>제안서 파일</td>
+                            <td colspan="2"><a th:href="@{'/download/proposal/' +${post.id}}" th:text="${proposalFileName}"></a></td>
                         </div>
                         </tr>
                         <tr>
-                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                            <td><strong>최종발표 파일</strong></td>
-                            <td colspan="2"><a class="card-text" th:href="@{'/download/finalPT/' +${post.id}}" th:text="${finalPTFileName}"></a></td>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 11pt">
+                            <td>최종발표 파일</td>
+                            <td colspan="2"><a th:href="@{'/download/finalPT/' +${post.id}}" th:text="${finalPTFileName}"></a></td>
                         </div>
                         </tr>
                         <tr>
-                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                            <td><strong>전시회 파일</strong></td>
-                            <td colspan="2"><a class="card-text" th:href="@{'/download/fair/' +${post.id}}" th:text="${fairFileName}"></a></td>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 11pt">
+                            <td>전시회 파일</td>
+                            <td colspan="2"><a th:href="@{'/download/fair/' +${post.id}}" th:text="${fairFileName}"></a></td>
                         </div>
                         </tr>
                         <tr>
-                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                            <td><strong>소스코드 파일</strong></td>
-                            <td colspan="2"><a class="card-text" th:href="@{'/download/source/' +${post.id}}" th:text="${sourceFileName}"></a></td>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 11pt">
+                            <td>소스코드 파일</td>
+                            <td colspan="2"><a th:href="@{'/download/source/' +${post.id}}" th:text="${sourceFileName}"></a></td>
                         </div>
                         </tr>
                         <tr>
-                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 12pt">
-                            <td><strong>논문 파일</strong></td>
-                            <td colspan="2"><a class="card-text" th:href="@{'/download/paper/' +${post.id}}" th:text="${paperFileName}"></a></td>
+                        <div th:if="${post.id != null}" style="margin-top: 1%; font-size: 11pt">
+                            <td>논문 파일</td>
+                            <td colspan="2"><a th:href="@{'/download/paper/' +${post.id}}" th:text="${paperFileName}"></a></td>
                         </div>
                         </tr>
                     </table>
