--- a/src/main/resources/templates/adminUpdateStatus.html
+++ b/src/main/resources/templates/adminUpdateStatus.html
@@ -40,7 +40,11 @@
                                 <option value="2">2학기</option>
                             </select>
                         </td>
-                        <td><button type="submit" name="getTeam">검색</button></td>
+                        <td>
+                            <button type="submit" name="getTeam">검색</button> &nbsp;&nbsp;
+                            <button onclick="window.open('/admin/createUser', 'adminCreateUser', 'width=600 height= 500'); return false">
+                                회원 생성</button>
+                        </td>
                     </form>
                 </tr>
             </table>
