--- a/src/main/resources/static/css/SignupInfoStyle.css
+++ b/src/main/resources/static/css/SignupInfoStyle.css
@@ -43,7 +43,8 @@ input[type=text], input[type=password]{
 }
 
 input[type=file]{
-  font-size: 16px;
+  margin-top: 10px;
+  font-size: 18px;
 }
 
 button {
